--- a/sneha/levelWise/5.10_Some_Any.htm
+++ b/sneha/levelWise/5.10_Some_Any.htm
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
 <meta name="dc:creator" content="Shamim" />
-<meta name="dc:title" content="Some or Any" />
+<meta name="dc:title" content="Some and Any" />
 
 
 
 <title>
-Some or Any
+Some and Any
 </title>
 
 <!-- Made with executable version 7.0 Release 3 Build 0 -->
@@ -32,23 +32,23 @@ Some or Any
 
 /* CSS variables for colours. */
 :root{
-	--strFontFace:       SolaimanLipi,Geneva,Arial,sans-serif;
+	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
 	--strTitleColor:     #000000;
 
-	--strFuncLightColor: #e9e9e9;
-	--strFuncShadeColor: #6a6a6a;
-	--strLinkColor:      #0000FF;
-	--strVLinkColor:     #0000CC;
+	--strFuncLightColor: #eeeeee;
+	--strFuncShadeColor: #6e6e6e;
+	--strLinkColor:      #0000ff;
+	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #9b9b9b;
-	--strNavLightColor:  #cdcdcd;
-	--strNavShadeColor:  #4d4d4d;
-	--strNavTextColor:   #000000;
+	--strNavBarColor:    #000000;
+	--strNavLightColor:  #7f7f7f;
+	--strNavShadeColor:  #000000;
+	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #bfbfbf;
-	--strExBGColor:      #d4d4d4;
+	--strPageBGColor:    #ffffff;
+	--strExBGColor:      #dddddd;
 }
 
 body{
@@ -1169,26 +1169,26 @@ I[2]=new Array();I[2][0]=100;
 I[2][1]='';
 I[2][2]='0';
 I[2][3]=new Array();
-I[2][3][0]=new Array('some','',1,100,1);
-I[2][3][1]=new Array('any','',0,0,1);
+I[2][3][0]=new Array('some','',0,0,1);
+I[2][3][1]=new Array('any','',1,100,1);
 I[3]=new Array();I[3][0]=100;
 I[3][1]='';
 I[3][2]='0';
 I[3][3]=new Array();
-I[3][3][0]=new Array('some','',0,0,1);
-I[3][3][1]=new Array('any','',1,100,1);
+I[3][3][0]=new Array('some','',1,100,1);
+I[3][3][1]=new Array('any','',0,0,1);
 I[4]=new Array();I[4][0]=100;
 I[4][1]='';
 I[4][2]='0';
 I[4][3]=new Array();
-I[4][3][0]=new Array('some','',0,0,1);
-I[4][3][1]=new Array('any','',1,100,1);
+I[4][3][0]=new Array('some','',1,100,1);
+I[4][3][1]=new Array('any','',0,0,1);
 I[5]=new Array();I[5][0]=100;
 I[5][1]='';
 I[5][2]='0';
 I[5][3]=new Array();
-I[5][3][0]=new Array('some','',1,100,1);
-I[5][3][1]=new Array('any','',0,0,1);
+I[5][3][0]=new Array('some','',0,0,1);
+I[5][3][1]=new Array('any','',1,100,1);
 I[6]=new Array();I[6][0]=100;
 I[6][1]='';
 I[6][2]='0';
@@ -1205,50 +1205,32 @@ I[8]=new Array();I[8][0]=100;
 I[8][1]='';
 I[8][2]='0';
 I[8][3]=new Array();
-I[8][3][0]=new Array('some','',0,0,1);
-I[8][3][1]=new Array('any','',1,100,1);
+I[8][3][0]=new Array('Diane went to the movies with some friends.','',1,100,1);
+I[8][3][1]=new Array('Diane went to the movies with any friends.','',0,0,1);
 I[9]=new Array();I[9][0]=100;
 I[9][1]='';
 I[9][2]='0';
 I[9][3]=new Array();
-I[9][3][0]=new Array('some','',1,100,1);
-I[9][3][1]=new Array('any','',0,0,1);
+I[9][3][0]=new Array('Diane doesn\'t have some friends.','',0,0,1);
+I[9][3][1]=new Array('Diane doesn\'t have any friends.','',1,100,1);
 I[10]=new Array();I[10][0]=100;
 I[10][1]='';
 I[10][2]='0';
 I[10][3]=new Array();
-I[10][3][0]=new Array('some','',0,0,1);
-I[10][3][1]=new Array('any','',1,100,1);
+I[10][3][0]=new Array('I don\'t have some brothers and sisters.','',0,0,1);
+I[10][3][1]=new Array('I don\'t have any brothers and sisters.','',1,100,1);
 I[11]=new Array();I[11][0]=100;
 I[11][1]='';
 I[11][2]='0';
 I[11][3]=new Array();
-I[11][3][0]=new Array('some','',0,0,1);
-I[11][3][1]=new Array('any','',1,100,1);
+I[11][3][0]=new Array('I don\'t have some pets.','',0,0,1);
+I[11][3][1]=new Array('I don\'t have any pets.','',1,100,1);
 I[12]=new Array();I[12][0]=100;
 I[12][1]='';
 I[12][2]='0';
 I[12][3]=new Array();
-I[12][3][0]=new Array('some','',1,100,1);
-I[12][3][1]=new Array('any','',0,0,1);
-I[13]=new Array();I[13][0]=100;
-I[13][1]='';
-I[13][2]='0';
-I[13][3]=new Array();
-I[13][3][0]=new Array('some','',1,100,1);
-I[13][3][1]=new Array('any','',0,0,1);
-I[14]=new Array();I[14][0]=100;
-I[14][1]='';
-I[14][2]='0';
-I[14][3]=new Array();
-I[14][3][0]=new Array('some','',1,100,1);
-I[14][3][1]=new Array('any','',0,0,1);
-I[15]=new Array();I[15][0]=100;
-I[15][1]='';
-I[15][2]='0';
-I[15][3]=new Array();
-I[15][3][0]=new Array('some','',0,0,1);
-I[15][3][1]=new Array('any','',1,100,1);
+I[12][3][0]=new Array('She has some money in her wallet.','',1,100,1);
+I[12][3][1]=new Array('She has any money in her wallet.','',0,0,1);
 
 
 function StartUp(){
@@ -1623,11 +1605,28 @@ function CheckFinished(){
 <!-- BeginTopNavButtons -->
 
 
+<div class="NavButtonBar" id="TopNavBar">
+
+
+<button class="NavButton" onclick="history.back(); return false;">Back</button>
+
+
+
+<button class="NavButton" onclick="location='level_5.htm'; return false;"> Home </button>
+
+
+
+<button class="NavButton" onclick="location='5.11_A_Few_A_Little.htm'; return false;">Next</button>
+
+
+</div>
+
+
 
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Some or Any</h2>
+	<h2 class="ExerciseTitle">Some and Any</h2>
 
 
 
@@ -1662,22 +1661,19 @@ function CheckFinished(){
 </div>
  
 <ol class="QuizQuestions" id="Questions">
-<li class="QuizQuestion" id="Q_0" style="display: none;"><div class="QuestionText">I need _____ clothes for school.</div><ol class="MCAnswers"><li id="Q_0_0"><button class="FuncButton" id="Q_0_0_Btn" onclick="CheckMCAnswer(0,0,this)">?</button>&#160;&#160;some</li><li id="Q_0_1"><button class="FuncButton" id="Q_0_1_Btn" onclick="CheckMCAnswer(0,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_1" style="display: none;"><div class="QuestionText">I don't have _____ shoes for the dance.</div><ol class="MCAnswers"><li id="Q_1_0"><button class="FuncButton" id="Q_1_0_Btn" onclick="CheckMCAnswer(1,0,this)">?</button>&#160;&#160;some</li><li id="Q_1_1"><button class="FuncButton" id="Q_1_1_Btn" onclick="CheckMCAnswer(1,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_2" style="display: none;"><div class="QuestionText">May I please have _____ milk?</div><ol class="MCAnswers"><li id="Q_2_0"><button class="FuncButton" id="Q_2_0_Btn" onclick="CheckMCAnswer(2,0,this)">?</button>&#160;&#160;some</li><li id="Q_2_1"><button class="FuncButton" id="Q_2_1_Btn" onclick="CheckMCAnswer(2,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_3" style="display: none;"><div class="QuestionText">There aren't _____ clean socks in the drawer.</div><ol class="MCAnswers"><li id="Q_3_0"><button class="FuncButton" id="Q_3_0_Btn" onclick="CheckMCAnswer(3,0,this)">?</button>&#160;&#160;some</li><li id="Q_3_1"><button class="FuncButton" id="Q_3_1_Btn" onclick="CheckMCAnswer(3,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_4" style="display: none;"><div class="QuestionText">Do you have _____ questions?</div><ol class="MCAnswers"><li id="Q_4_0"><button class="FuncButton" id="Q_4_0_Btn" onclick="CheckMCAnswer(4,0,this)">?</button>&#160;&#160;some</li><li id="Q_4_1"><button class="FuncButton" id="Q_4_1_Btn" onclick="CheckMCAnswer(4,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_5" style="display: none;"><div class="QuestionText">I have to make _____ phone calls.</div><ol class="MCAnswers"><li id="Q_5_0"><button class="FuncButton" id="Q_5_0_Btn" onclick="CheckMCAnswer(5,0,this)">?</button>&#160;&#160;some</li><li id="Q_5_1"><button class="FuncButton" id="Q_5_1_Btn" onclick="CheckMCAnswer(5,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_6" style="display: none;"><div class="QuestionText">They did not bring _____ money.</div><ol class="MCAnswers"><li id="Q_6_0"><button class="FuncButton" id="Q_6_0_Btn" onclick="CheckMCAnswer(6,0,this)">?</button>&#160;&#160;some</li><li id="Q_6_1"><button class="FuncButton" id="Q_6_1_Btn" onclick="CheckMCAnswer(6,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_7" style="display: none;"><div class="QuestionText">Can I have _____ water please?</div><ol class="MCAnswers"><li id="Q_7_0"><button class="FuncButton" id="Q_7_0_Btn" onclick="CheckMCAnswer(7,0,this)">?</button>&#160;&#160;some</li><li id="Q_7_1"><button class="FuncButton" id="Q_7_1_Btn" onclick="CheckMCAnswer(7,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_8" style="display: none;"><div class="QuestionText">We don't have _____ milk.</div><ol class="MCAnswers"><li id="Q_8_0"><button class="FuncButton" id="Q_8_0_Btn" onclick="CheckMCAnswer(8,0,this)">?</button>&#160;&#160;some</li><li id="Q_8_1"><button class="FuncButton" id="Q_8_1_Btn" onclick="CheckMCAnswer(8,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_9" style="display: none;"><div class="QuestionText">I have _____ time before I have to go.</div><ol class="MCAnswers"><li id="Q_9_0"><button class="FuncButton" id="Q_9_0_Btn" onclick="CheckMCAnswer(9,0,this)">?</button>&#160;&#160;some</li><li id="Q_9_1"><button class="FuncButton" id="Q_9_1_Btn" onclick="CheckMCAnswer(9,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_10" style="display: none;"><div class="QuestionText">The restaurant doesn't have _____ empty tables.</div><ol class="MCAnswers"><li id="Q_10_0"><button class="FuncButton" id="Q_10_0_Btn" onclick="CheckMCAnswer(10,0,this)">?</button>&#160;&#160;some</li><li id="Q_10_1"><button class="FuncButton" id="Q_10_1_Btn" onclick="CheckMCAnswer(10,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_11" style="display: none;"><div class="QuestionText">He doesn't have _____ time to visit his family.</div><ol class="MCAnswers"><li id="Q_11_0"><button class="FuncButton" id="Q_11_0_Btn" onclick="CheckMCAnswer(11,0,this)">?</button>&#160;&#160;some</li><li id="Q_11_1"><button class="FuncButton" id="Q_11_1_Btn" onclick="CheckMCAnswer(11,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_12" style="display: none;"><div class="QuestionText">We have _____ books you can borrow.</div><ol class="MCAnswers"><li id="Q_12_0"><button class="FuncButton" id="Q_12_0_Btn" onclick="CheckMCAnswer(12,0,this)">?</button>&#160;&#160;some</li><li id="Q_12_1"><button class="FuncButton" id="Q_12_1_Btn" onclick="CheckMCAnswer(12,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_13" style="display: none;"><div class="QuestionText">They have _____ pictures on the wall in their house.</div><ol class="MCAnswers"><li id="Q_13_0"><button class="FuncButton" id="Q_13_0_Btn" onclick="CheckMCAnswer(13,0,this)">?</button>&#160;&#160;some</li><li id="Q_13_1"><button class="FuncButton" id="Q_13_1_Btn" onclick="CheckMCAnswer(13,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_14" style="display: none;"><div class="QuestionText">I want to eat _____ dessert.</div><ol class="MCAnswers"><li id="Q_14_0"><button class="FuncButton" id="Q_14_0_Btn" onclick="CheckMCAnswer(14,0,this)">?</button>&#160;&#160;some</li><li id="Q_14_1"><button class="FuncButton" id="Q_14_1_Btn" onclick="CheckMCAnswer(14,1,this)">?</button>&#160;&#160;any</li></ol></li>
-<li class="QuizQuestion" id="Q_15" style="display: none;"><div class="QuestionText">They don't have _____ junk food in their house.</div><ol class="MCAnswers"><li id="Q_15_0"><button class="FuncButton" id="Q_15_0_Btn" onclick="CheckMCAnswer(15,0,this)">?</button>&#160;&#160;some</li><li id="Q_15_1"><button class="FuncButton" id="Q_15_1_Btn" onclick="CheckMCAnswer(15,1,this)">?</button>&#160;&#160;any</li></ol></li></ol>
+<li class="QuizQuestion" id="Q_0" style="display: none;"><div class="QuestionText">We need _____ eggs to make omelets.</div><ol class="MCAnswers"><li id="Q_0_0"><button class="FuncButton" id="Q_0_0_Btn" onclick="CheckMCAnswer(0,0,this)">?</button>&#160;&#160;some</li><li id="Q_0_1"><button class="FuncButton" id="Q_0_1_Btn" onclick="CheckMCAnswer(0,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_1" style="display: none;"><div class="QuestionText">You can't get _____ information here.</div><ol class="MCAnswers"><li id="Q_1_0"><button class="FuncButton" id="Q_1_0_Btn" onclick="CheckMCAnswer(1,0,this)">?</button>&#160;&#160;some</li><li id="Q_1_1"><button class="FuncButton" id="Q_1_1_Btn" onclick="CheckMCAnswer(1,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_2" style="display: none;"><div class="QuestionText">We don't have _____ milk in the refrigerator.</div><ol class="MCAnswers"><li id="Q_2_0"><button class="FuncButton" id="Q_2_0_Btn" onclick="CheckMCAnswer(2,0,this)">?</button>&#160;&#160;some</li><li id="Q_2_1"><button class="FuncButton" id="Q_2_1_Btn" onclick="CheckMCAnswer(2,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_3" style="display: none;"><div class="QuestionText">Janica brought _____ books on the trip.</div><ol class="MCAnswers"><li id="Q_3_0"><button class="FuncButton" id="Q_3_0_Btn" onclick="CheckMCAnswer(3,0,this)">?</button>&#160;&#160;some</li><li id="Q_3_1"><button class="FuncButton" id="Q_3_1_Btn" onclick="CheckMCAnswer(3,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_4" style="display: none;"><div class="QuestionText">Kate likes to sprinkle _____ sugar on her strawberries.</div><ol class="MCAnswers"><li id="Q_4_0"><button class="FuncButton" id="Q_4_0_Btn" onclick="CheckMCAnswer(4,0,this)">?</button>&#160;&#160;some</li><li id="Q_4_1"><button class="FuncButton" id="Q_4_1_Btn" onclick="CheckMCAnswer(4,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_5" style="display: none;"><div class="QuestionText">I haven't seen _____ movies lately.</div><ol class="MCAnswers"><li id="Q_5_0"><button class="FuncButton" id="Q_5_0_Btn" onclick="CheckMCAnswer(5,0,this)">?</button>&#160;&#160;some</li><li id="Q_5_1"><button class="FuncButton" id="Q_5_1_Btn" onclick="CheckMCAnswer(5,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_6" style="display: none;"><div class="QuestionText">There isn't _____ toilet paper in the bathroom.</div><ol class="MCAnswers"><li id="Q_6_0"><button class="FuncButton" id="Q_6_0_Btn" onclick="CheckMCAnswer(6,0,this)">?</button>&#160;&#160;some</li><li id="Q_6_1"><button class="FuncButton" id="Q_6_1_Btn" onclick="CheckMCAnswer(6,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_7" style="display: none;"><div class="QuestionText">I need _____ clothes for school.</div><ol class="MCAnswers"><li id="Q_7_0"><button class="FuncButton" id="Q_7_0_Btn" onclick="CheckMCAnswer(7,0,this)">?</button>&#160;&#160;some</li><li id="Q_7_1"><button class="FuncButton" id="Q_7_1_Btn" onclick="CheckMCAnswer(7,1,this)">?</button>&#160;&#160;any</li></ol></li>
+<li class="QuizQuestion" id="Q_8" style="display: none;"><div class="QuestionText">Select the correct sentence.</div><ol class="MCAnswers"><li id="Q_8_0"><button class="FuncButton" id="Q_8_0_Btn" onclick="CheckMCAnswer(8,0,this)">?</button>&#160;&#160;Diane went to the movies with some friends.</li><li id="Q_8_1"><button class="FuncButton" id="Q_8_1_Btn" onclick="CheckMCAnswer(8,1,this)">?</button>&#160;&#160;Diane went to the movies with any friends.</li></ol></li>
+<li class="QuizQuestion" id="Q_9" style="display: none;"><div class="QuestionText">Select the correct sentence.</div><ol class="MCAnswers"><li id="Q_9_0"><button class="FuncButton" id="Q_9_0_Btn" onclick="CheckMCAnswer(9,0,this)">?</button>&#160;&#160;Diane doesn't have some friends.</li><li id="Q_9_1"><button class="FuncButton" id="Q_9_1_Btn" onclick="CheckMCAnswer(9,1,this)">?</button>&#160;&#160;Diane doesn't have any friends.</li></ol></li>
+<li class="QuizQuestion" id="Q_10" style="display: none;"><div class="QuestionText">Select the correct sentence.</div><ol class="MCAnswers"><li id="Q_10_0"><button class="FuncButton" id="Q_10_0_Btn" onclick="CheckMCAnswer(10,0,this)">?</button>&#160;&#160;I don't have some brothers and sisters.</li><li id="Q_10_1"><button class="FuncButton" id="Q_10_1_Btn" onclick="CheckMCAnswer(10,1,this)">?</button>&#160;&#160;I don't have any brothers and sisters.</li></ol></li>
+<li class="QuizQuestion" id="Q_11" style="display: none;"><div class="QuestionText">Select the correct sentence.</div><ol class="MCAnswers"><li id="Q_11_0"><button class="FuncButton" id="Q_11_0_Btn" onclick="CheckMCAnswer(11,0,this)">?</button>&#160;&#160;I don't have some pets.</li><li id="Q_11_1"><button class="FuncButton" id="Q_11_1_Btn" onclick="CheckMCAnswer(11,1,this)">?</button>&#160;&#160;I don't have any pets.</li></ol></li>
+<li class="QuizQuestion" id="Q_12" style="display: none;"><div class="QuestionText">Select the correct sentence.</div><ol class="MCAnswers"><li id="Q_12_0"><button class="FuncButton" id="Q_12_0_Btn" onclick="CheckMCAnswer(12,0,this)">?</button>&#160;&#160;She has some money in her wallet.</li><li id="Q_12_1"><button class="FuncButton" id="Q_12_1_Btn" onclick="CheckMCAnswer(12,1,this)">?</button>&#160;&#160;She has any money in her wallet.</li></ol></li></ol>
 
 
 
@@ -1691,6 +1687,23 @@ function CheckFinished(){
 </div>
 
 <!-- BeginBottomNavButtons -->
+
+
+<div class="NavButtonBar" id="BottomNavBar">
+
+
+<button class="NavButton" onclick="history.back(); return false;">Back</button>
+
+
+
+<button class="NavButton" onclick="location='level_5.htm'; return false;"> Home </button>
+
+
+
+<button class="NavButton" onclick="location='5.11_A_Few_A_Little.htm'; return false;">Next</button>
+
+
+</div>
 
 
 
