--- a/sneha.html
+++ b/sneha.html
@@ -76,12 +76,7 @@
 	  <tr><td><a href="sneha/levelWise/level_2.htm">Basic Grammar Level 2<a/></td></tr>
 	  <tr><td><a href="sneha/levelWise/level_3.htm">Basic Grammar Level 3<a/></td></tr>
 	  <tr><td><a href="sneha/levelWise/level_4.htm">Basic Grammar Level 4<a/></td></tr>
-	  <tr><td><a href="sneha/draft/5.1_Possessive_Nouns_1.htm">Possessive Nouns 1<a/></td></tr>
-	  <tr><td><a href="sneha/draft/5.2_Possessive_Nouns_2.htm">Possessive Nouns 2<a/></td></tr>
-	  <tr><td><a href="sneha/draft/5.3_Apostrophe.htm">Apostrophe<a/></td></tr>
-	  <tr><td><a href="sneha/draft/5.4_Possessive_Adjectives_and_Possessive_Pronouns.htm">Possessive Adjectives and Possessive Pronouns<a/></td></tr>
-	  <tr><td><a href="sneha/draft/5.5_Many_Much_Few_Little.htm">Many Much Few Little<a/></td></tr>
-	  <tr><td><a href="sneha/draft/5.6_Some_Any.htm">Some & Any<a/></td></tr>
+	  <tr><td><a href="sneha/levelWise/level_5.htm">Basic Grammar Level 5<a/></td></tr>
 	  <!--
 	  <tr><td><a href="#">Basic Grammar Level 6<a/></td></tr>
 	  <tr><td><a href="#">Basic Grammar Level 7<a/></td></tr>
