--- a/sneha/levelWise/5.8_Distributive_Determiners_All_Both_Half.htm
+++ b/sneha/levelWise/5.8_Distributive_Determiners_All_Both_Half.htm
@@ -32,23 +32,23 @@ Distributive Determiners - All, Both, or Half
 
 /* CSS variables for colours. */
 :root{
-	--strFontFace:       arial,helvetica,sans-serif;
+	--strFontFace:       SolaimanLipi,Geneva,Arial,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
 	--strTitleColor:     #000000;
 
-	--strFuncLightColor: #eeeeee;
-	--strFuncShadeColor: #6e6e6e;
-	--strLinkColor:      #0000ff;
-	--strVLinkColor:     #ff00ff;
+	--strFuncLightColor: #e9e9e9;
+	--strFuncShadeColor: #6a6a6a;
+	--strLinkColor:      #0000FF;
+	--strVLinkColor:     #0000CC;
 	
-	--strNavBarColor:    #000000;
-	--strNavLightColor:  #7f7f7f;
-	--strNavShadeColor:  #000000;
-	--strNavTextColor:   #ffffff;
+	--strNavBarColor:    #9b9b9b;
+	--strNavLightColor:  #cdcdcd;
+	--strNavShadeColor:  #4d4d4d;
+	--strNavTextColor:   #000000;
 	
-	--strPageBGColor:    #ffffff;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #bfbfbf;
+	--strExBGColor:      #d4d4d4;
 }
 
 body{
@@ -970,7 +970,7 @@ var ShuffleQs = true;
 var ShuffleAs = true;
 var DefaultRight = 'Very good. You are correct.<br>&#x2764;&#x2764;&#x2764;';
 var DefaultWrong = 'Wrong. Try again.<br>&#x2639;&#x2639;&#x2639;';
-var QsToShow = 5;
+var QsToShow = 10;
 var Score = 0;
 var Finished = false;
 var Qs = null;
@@ -1638,7 +1638,7 @@ function CheckFinished(){
 
 
 
-<button class="NavButton" onclick="location='level_5.htm'; return false;"> Home </button>
+<button class="NavButton" onclick="location='level_5.htm'; return false;"> Index </button>
 
 
 
