--- a/sneha/levelWise/5.7_Question_Words_3.htm
+++ b/sneha/levelWise/5.7_Question_Words_3.htm
@@ -1612,7 +1612,7 @@ function CheckFinished(){
 
 
 
-<button class="NavButton" onclick="location='level_5.htm'; return false;"> Index </button>
+<button class="NavButton" onclick="location='level_5.htm'; return false;"> Home </button>
 
 
 
