--- a/sujon.html
+++ b/sujon.html
@@ -56,8 +56,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
 					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">Home</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sneha.html">Sneha</a></li>
-					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="difa.html">Difa</a></li>
+					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sneha.html">Grammar</a></li>
+					
 					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="sujon.html">Sujon</a></li>
 					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="vocabulary.html">Vocabulary</a></li>
 					<li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="reference.html">Books</a></li>
