--- a/sneha.html
+++ b/sneha.html
@@ -78,7 +78,9 @@
 	  <tr><td><a href="sneha/levelWise/level_4.htm">Basic Grammar Level 4<a/></td></tr>
 	  <tr><td><a href="sneha/levelWise/level_5.htm">Basic Grammar Level 5<a/></td></tr>
 	  <!--
-	  <tr><td><a href="#">Basic Grammar Level 6<a/></td></tr>
+	  <tr><td><a href="sneha/levelWise/level_6.htm">Basic Grammar Level 6<a/></td></tr>
+	  
+	  
 	  <tr><td><a href="#">Basic Grammar Level 7<a/></td></tr>
 	  <tr><td><a href="#">Basic Grammar Level 8<a/></td></tr>
 	  <tr><td><a href="#">Basic Grammar Level 9<a/></td></tr>
