--- a/sneha/levelWise/level_6.htm
+++ b/sneha/levelWise/level_6.htm
@@ -4,7 +4,7 @@
 		<meta name="author" content="Created with Masher by Half-Baked Software, registered to Shamim."/>
 		<meta name="keywords" content="Masher, Hot Potatoes, Half-Baked Software, Windows, University of Victoria"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-		<title>Basic Grammar Level 5</title>
+		<title>Basic Grammar Level 6</title>
 		<!-- Made with executable version HotPotatoes: Masher Version 7.0 Release 3 Build 0 -->
 		<!-- The following insertion allows you to add your own code directly to this head tag from the configuration screen -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,61 +13,53 @@
 		<body>
 			<div class="NavButtonBar">&#160;</div>
 			<div class="Titles">
-				<h2 class="ExerciseTitle">Basic Grammar Level 5</h2>
+				<h2 class="ExerciseTitle">Basic Grammar Level 6</h2>
 			</div>
 			<div style="text-align: center;">
 				<div class="IndexDiv">
 					<ul class="Index">
 						<li>
-							<a href="5.1_Possessive_Nouns_1.htm">5.1 Possessive Nouns 1</a>
+							<a href="6.1_Comparative_Superlative_Adjective_1.htm">Comparative and Superlative Adjectives 1</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.2_Possessive_Nouns_2.htm">5.2 Possessive Nouns 2</a>
+							<a href="6.2_Comparative_Superlative_Adjective_2.htm">Comparative and Superlative Adjectives 2</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.3_Apostrophe.htm">5.3 Apostrophe (')</a>
+							<a href="6.3_Irregular_Comparative_Superlative_Adjectives.htm">Irregular Comparative and Superlative Adjectives</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.4_Possessive_Adjectives_and_Possessive_Pronouns.htm">5.4 Possessive Adjectives and Possessive Pronouns</a>
+							<a href="6.4_Basic_Regular_Adverbs.htm">Basic Regular Adverbs</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.5_Many_Much_Few_Little.htm">5.5 Many, Much, Few, and Little</a>
+							<a href="6.5_Adverb_Either.htm">Adverb Either</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.6_Some_Any.htm">5.6 Some or Any</a>
+							<a href="6.6_Adverb_So.htm">Adverb So</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.7_Question_Words_3.htm">5.7 Question Words 3</a>
+							<a href="6.7_Comparative_Superlative_Adverbs_1.htm">Comparative and Superlative Adverbs 1</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.8_Distributive_Determiners_All_Both_Half.htm">5.8 Distributive Determiners - All, Both, or Half</a>
+							<a href="6.8_Compound_Nouns_1.htm">Compound Nouns 1</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.9_Determiners_Difference.htm">5.9 Determiners of Difference</a>
+							<a href="6.9_Compound_Nouns_2.htm">Compound Nouns 2</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.10_Some_Any.htm">5.10 Some and Any</a>
+							<a href="6.10_Compound_Nouns_Some_Any_No.htm">Compound Nouns with Some, Any, and No</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 						<li>
-							<a href="5.11_A_Few_A_Little.htm">5.11 A Few and A Little</a>
-							&#160;&#160;&#160;&#160;&#160;
-						</li>
-						<li>
-							<a href="5_Level_Five_Final.htm">★★★ Level 5 Final Test ★★★</a>
-							&#160;&#160;&#160;&#160;&#160;
-						</li>
-						<li>
-							<a href="First_Term_Final.htm">❤❤ First Term Final Test ❤❤</a>
+							<a href="6_Level_Six_Final.htm">★★★ Level 6 Final Test ★★★</a>
 							&#160;&#160;&#160;&#160;&#160;
 						</li>
 					</ul>
