--- a/grammar/basicGrammar.html
+++ b/grammar/basicGrammar.html
@@ -100,7 +100,7 @@ Comparative adjectives compare two things. Adjectives that contain only one syll
 <br />
 Superlative adjectives compare more than two things. Adjectives that contain only one syllable or end in &quot;-y&quot; use &quot;-est&quot; to form superlatives. For adjectives ending in &quot;-y&quot;, change the &quot;y&quot; to &quot;i&quot; before adding &quot;-est&quot;.</span><br />
 &nbsp;
-<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:500px;">
+<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:100%;">
 	<thead>
 		<tr>
 			<th scope="col"><span style="font-size:16px;">Regular<br />
@@ -181,7 +181,7 @@ Adjectives with two or more syllables do not change but instead, add &quot;more&
 <br />
 <strong>Comparative and Superlative Adjectives - Examples</strong></span><br />
 &nbsp;
-<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:500px;">
+<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:100%;">
 	<thead>
 		<tr>
 			<th scope="col"><span style="font-size:16px;">Regular<br />
@@ -231,7 +231,7 @@ Some adjectives have different forms of comparatives and superlatives. They do n
 <br />
 <strong>Adjectives - irregular comparatives and superlatives - Examples</strong></span><br />
 &nbsp;
-<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:500px;">
+<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:100%;">
 	<thead>
 		<tr>
 			<th scope="col"><span style="font-size:16px;">Regular<br />
@@ -360,7 +360,7 @@ Comparative adverbs compare two things. Adverbs that contain only one syllable o
 <br />
 Superlative adverbs compare more than two things. Adverbs that contain only one syllable or do not end in &quot;-ly&quot; (in adverb form) use &quot;-est&quot; to form superlatives. Just like superlative adjectives, adverbs ending in &quot;y&quot;, change the &quot;y&quot; to &quot;i&quot; before adding &quot;-est&quot; to form superlative adverbs.</span><br />
 &nbsp;
-<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:500px;">
+<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:100%;">
 	<thead>
 		<tr>
 			<th scope="col"><span style="font-size:16px;">Regular<br />
