--- a/sneha/levelWise/5.10_Some_Any.htm
+++ b/sneha/levelWise/5.10_Some_Any.htm
@@ -1626,7 +1626,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Some and Any</h2>
+	<h2 class="ExerciseTitle">5.10 Some and Any</h2>
 
 
 
