--- a/sneha/levelWise/5.5_Many_Much_Few_Little.htm
+++ b/sneha/levelWise/5.5_Many_Much_Few_Little.htm
@@ -1648,7 +1648,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Many, Much, Few, and Little</h2>
+	<h2 class="ExerciseTitle">5.5 Many, Much, Few, and Little</h2>
 
 
 
