--- a/sneha/levelWise/5.6_Some_Any.htm
+++ b/sneha/levelWise/5.6_Some_Any.htm
@@ -1644,7 +1644,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Some or Any</h2>
+	<h2 class="ExerciseTitle">5.6 Some or Any</h2>
 
 
 
