--- a/sneha/levelWise/5.8_Distributive_Determiners_All_Both_Half.htm
+++ b/sneha/levelWise/5.8_Distributive_Determiners_All_Both_Half.htm
@@ -1652,7 +1652,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Distributive Determiners - All, Both, or Half</h2>
+	<h2 class="ExerciseTitle">5.8 Distributive Determiners - All, Both, or Half</h2>
 
 
 
