--- a/sneha/levelWise/5.9_Determiners_Difference.htm
+++ b/sneha/levelWise/5.9_Determiners_Difference.htm
@@ -1620,7 +1620,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Determiners of Difference</h2>
+	<h2 class="ExerciseTitle">5.9 Determiners of Difference</h2>
 
 
 
