--- a/sneha/levelWise/6.10_Compound_Nouns_Some_Any_No.htm
+++ b/sneha/levelWise/6.10_Compound_Nouns_Some_Any_No.htm
@@ -1632,7 +1632,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Compound Nouns with Some, Any, and No</h2>
+	<h2 class="ExerciseTitle">6.10 Compound Nouns with Some, Any, and No</h2>
 
 
 
