--- a/sneha/levelWise/6.2_Comparative_Superlative_Adjective_2.htm
+++ b/sneha/levelWise/6.2_Comparative_Superlative_Adjective_2.htm
@@ -1608,7 +1608,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Comparative and Superlative Adjectives 2</h2>
+	<h2 class="ExerciseTitle">6.2 Comparative and Superlative Adjectives 2</h2>
 
 
 
