--- a/sneha/levelWise/6.3_Irregular_Comparative_Superlative_Adjectives.htm
+++ b/sneha/levelWise/6.3_Irregular_Comparative_Superlative_Adjectives.htm
@@ -1614,7 +1614,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Irregular Comparative and Superlative Adjectives</h2>
+	<h2 class="ExerciseTitle">6.3 Irregular Comparative and Superlative Adjectives</h2>
 
 
 
