--- a/sneha/levelWise/6.4_Basic_Regular_Adverbs.htm
+++ b/sneha/levelWise/6.4_Basic_Regular_Adverbs.htm
@@ -1644,7 +1644,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Basic Regular Adverbs</h2>
+	<h2 class="ExerciseTitle">6.4 Basic Regular Adverbs</h2>
 
 
 
