--- a/sneha/levelWise/6.5_Adverb_Either.htm
+++ b/sneha/levelWise/6.5_Adverb_Either.htm
@@ -1612,7 +1612,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Adverb Either</h2>
+	<h2 class="ExerciseTitle">6.5 Adverb Either</h2>
 
 
 
