--- a/sneha/levelWise/6.7_Comparative_Superlative_Adverbs_1.htm
+++ b/sneha/levelWise/6.7_Comparative_Superlative_Adverbs_1.htm
@@ -1613,7 +1613,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Comparative and Superlative Adverbs 1</h2>
+	<h2 class="ExerciseTitle">6.7 Comparative and Superlative Adverbs 1</h2>
 
 
 
