--- a/sneha/levelWise/6.9_Compound_Nouns_2.htm
+++ b/sneha/levelWise/6.9_Compound_Nouns_2.htm
@@ -1618,7 +1618,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Compound Nouns 2</h2>
+	<h2 class="ExerciseTitle">6.9 Compound Nouns 2</h2>
 
 
 
