--- a/sneha/levelWise/6.1_Comparative_Superlative_Adjective_1.htm
+++ b/sneha/levelWise/6.1_Comparative_Superlative_Adjective_1.htm
@@ -2031,7 +2031,7 @@ function ShowHint(QNum){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Comparative and Superlative Adjectives 1</h2>
+	<h2 class="ExerciseTitle">6.1 Comparative and Superlative Adjectives 1</h2>
 
 
 
