--- a/sneha/levelWise/6.6_Adverb_So.htm
+++ b/sneha/levelWise/6.6_Adverb_So.htm
@@ -1608,7 +1608,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Adverb So</h2>
+	<h2 class="ExerciseTitle">6.6 Adverb So</h2>
 
 
 
