--- a/sneha/levelWise/6.8_Compound_Nouns_1.htm
+++ b/sneha/levelWise/6.8_Compound_Nouns_1.htm
@@ -1639,7 +1639,7 @@ function CheckFinished(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Compound Nouns 1</h2>
+	<h2 class="ExerciseTitle">6.8 Compound Nouns 1</h2>
 
 
 
