--- a/reference.html
+++ b/reference.html
@@ -125,16 +125,16 @@
         <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/features1.jpg">
+                        <img src="assets/images/feluda.jpg">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">
-                            <strong>Story Title</strong>
+                            <strong>Feluda All 2</strong>
                         </h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Main: Main Writer</em><br><em>Translator: Translator Writer</em></h6>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><em>Writer: Satyajit Ray</em><br><em>Type: Bengali Detective Story</em></h6>
                         
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="#" class="btn btn-primary item-btn display-7">Download</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="assets/files/story/Feluda_All_2.pdf" class="btn btn-primary item-btn display-7">Download</a></div>
                 </div>
             </div>
 			
