--- a/grammar/basicGrammar.html
+++ b/grammar/basicGrammar.html
@@ -4282,7 +4282,7 @@ If the adjective ends in &quot;-le&quot;, &quot;-able&quot;, or &quot;-ible&quot
 	<li>Idle - idly</li>
 	<li>Reasonable - reasonably</li>
 	<li>Probable - probably</li>
-	<li>Possible - possible</li>
+	<li>Possible - possibly</li>
 	<li>Horrible - horribly</li>
 	<li>Enthusiastic - enthusiastically</li>
 	<li>Realistic - realistically</li>
